# libjpeg

./: .travis.yml  CMakeLists.txt  README  dist.info  jconfig.h.cmake  jmemname.c  jmorecfg.h
cmake/: dist.cmake
contrib/NuGet/: libjpeg-msvc-x64-build.nuget.bat  libjpeg-msvc-x64.nuspec  libjpeg-msvc-x64.targets  libjpeg-msvc-x86-build.nuget.bat  libjpeg-msvc-x86.nuspec  libjpeg-msvc-x86.targets
include/: jconfig.h
